<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_head_color"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/ref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:layout_gravity="center_horizontal"
            android:onClick="refresh"/>

        <CheckBox
            android:id="@+id/attack_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attack"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:paddingEnd="16dp" />

        <CheckBox
            android:id="@+id/defense_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defense"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:paddingEnd="16dp"/>

        <CheckBox
            android:id="@+id/hp_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:paddingEnd="16dp"/>



    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



    </LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAppearance="?android:textAppearanceMedium"/>

    <ProgressBar
        android:id="@+id/loading_indicator"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>