<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/text_head_color">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pikachu" 
        android:textSize="50sp"
        android:gravity="center_horizontal"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hp"
            android:gravity="end"
            android:textSize="20sp"
            android:paddingEnd="4dp"/>

        <TextView
            android:id="@+id/hp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="45"
            android:gravity="start"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingStart="4dp"/>


    </LinearLayout>
    <ImageView
        android:id="@+id/image"
        android:layout_width="288dp"
        android:layout_height="288dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/color_black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:text="@string/height"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:text="@string/n_45"
            android:gravity="center_horizontal"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text="@string/weight"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:text="@string/n_45"
                android:gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text="@string/attack"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/attack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:text="@string/n_45"
                android:gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text="@string/defense"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/defense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:text="@string/n_45"
                android:gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:padding="16dp"
        android:text="nature, poison"/>

    
</LinearLayout>